fix scorll don't have white space/fix setState warning

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 * {
-  scroll-margin-top: 10rem;
+  scroll-margin-bottom: -10rem;
 }
